--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <title>nearwell</title>
   <style type="text/css">
-  pre {
-    background: #eee;
-  }
+    #game {
+      margin: 2em auto;
+      border: 1em solid #eee;
+    }
   </style>
 </head>
 <body>
+  <div id="game"></div>
   <script type="text/javascript" src="dist/js/nearwell.js"></script>
 </body>
 </html>
